internal/jabl/y.output

state 0
	$accept: .program $end 

	START  shift 3
	.  error

	block  goto 2
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  block.    (1)

	.  reduce 1 (src line 29)


state 3
	block:  START.stmt_list END 

	IF  shift 9
	SET  shift 10
	PRINT  shift 6
	CHOICE  shift 8
	GOTO  shift 7
	'/'  shift 11
	.  error

	stmt  goto 5
	stmt_list  goto 4

state 4
	block:  START stmt_list.END 
	stmt_list:  stmt_list.stmt 

	END  shift 12
	IF  shift 9
	SET  shift 10
	PRINT  shift 6
	CHOICE  shift 8
	GOTO  shift 7
	'/'  shift 11
	.  error

	stmt  goto 13

state 5
	stmt_list:  stmt.    (4)

	.  reduce 4 (src line 39)


state 6
	stmt:  PRINT.'(' strExpr ')' 

	'('  shift 14
	.  error


state 7
	stmt:  GOTO.'(' strExpr ')' 

	'('  shift 15
	.  error


state 8
	stmt:  CHOICE.'(' strExpr ',' block ')' 

	'('  shift 16
	.  error


state 9
	stmt:  IF.'(' boolExpr ')' block 
	stmt:  IF.'(' boolExpr ')' block ELSE block 

	'('  shift 17
	.  error


state 10
	stmt:  SET.'(' strExpr ',' numExpr ')' 

	'('  shift 18
	.  error


state 11
	stmt:  '/'.'/' STRING 

	'/'  shift 19
	.  error


state 12
	block:  START stmt_list END.    (2)

	.  reduce 2 (src line 33)


state 13
	stmt_list:  stmt_list stmt.    (3)

	.  reduce 3 (src line 37)


state 14
	stmt:  PRINT '('.strExpr ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 20
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 15
	stmt:  GOTO '('.strExpr ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 32
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 16
	stmt:  CHOICE '('.strExpr ',' block ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 33
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 17
	stmt:  IF '('.boolExpr ')' block 
	stmt:  IF '('.boolExpr ')' block ELSE block 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 35
	boolExpr  goto 34
	numExpr  goto 23
	rollExpr  goto 26

state 18
	stmt:  SET '('.strExpr ',' numExpr ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 36
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 19
	stmt:  '/' '/'.STRING 

	STRING  shift 37
	.  error


state 20
	stmt:  PRINT '(' strExpr.')' 
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	'+'  shift 39
	')'  shift 38
	.  error


state 21
	strExpr:  STRING.    (12)

	.  reduce 12 (src line 52)


state 22
	strExpr:  '('.strExpr ')' 
	boolExpr:  '('.boolExpr ')' 
	numExpr:  '('.numExpr ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 42
	boolExpr  goto 43
	numExpr  goto 44
	rollExpr  goto 26

state 23
	strExpr:  numExpr.'+' strExpr 
	boolExpr:  numExpr.CMP_LT numExpr 
	boolExpr:  numExpr.CMP_GT numExpr 
	boolExpr:  numExpr.CMP_LTE numExpr 
	boolExpr:  numExpr.CMP_GTE numExpr 
	boolExpr:  numExpr.CMP_EQ numExpr 
	boolExpr:  numExpr.CMP_NEQ numExpr 
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	CMP_LT  shift 46
	CMP_GT  shift 47
	CMP_LTE  shift 48
	CMP_GTE  shift 49
	CMP_EQ  shift 50
	CMP_NEQ  shift 51
	'+'  shift 45
	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  error


state 24
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	CMP_EQ  shift 58
	CMP_NEQ  shift 59
	CMP_AND  shift 56
	CMP_OR  shift 57
	'+'  shift 55
	.  error


state 25
	numExpr:  NUMBER.    (34)
	rollExpr:  NUMBER.DICE 

	DICE  shift 60
	.  reduce 34 (src line 80)


state 26
	numExpr:  rollExpr.    (35)

	.  reduce 35 (src line 82)


state 27
	numExpr:  SET.'(' strExpr ',' numExpr ')' 

	'('  shift 61
	.  error


state 28
	numExpr:  GET.'(' strExpr ')' 

	'('  shift 62
	.  error


state 29
	boolExpr:  BOOLEAN.    (19)

	.  reduce 19 (src line 62)


state 30
	boolExpr:  CMP_NOT.boolExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 35
	boolExpr  goto 63
	numExpr  goto 23
	rollExpr  goto 26

state 31
	rollExpr:  DICE.    (43)

	.  reduce 43 (src line 92)


state 32
	stmt:  GOTO '(' strExpr.')' 
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	'+'  shift 39
	')'  shift 64
	.  error


state 33
	stmt:  CHOICE '(' strExpr.',' block ')' 
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	'+'  shift 39
	','  shift 65
	.  error


state 34
	stmt:  IF '(' boolExpr.')' block 
	stmt:  IF '(' boolExpr.')' block ELSE block 
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	CMP_EQ  shift 58
	CMP_NEQ  shift 59
	CMP_AND  shift 56
	CMP_OR  shift 57
	'+'  shift 55
	')'  shift 66
	.  error


state 35
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	'+'  shift 39
	.  error


state 36
	stmt:  SET '(' strExpr.',' numExpr ')' 
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	'+'  shift 39
	','  shift 67
	.  error


state 37
	stmt:  '/' '/' STRING.    (11)

	.  reduce 11 (src line 49)


state 38
	stmt:  PRINT '(' strExpr ')'.    (5)

	.  reduce 5 (src line 42)


state 39
	strExpr:  strExpr '+'.strExpr 
	strExpr:  strExpr '+'.numExpr 
	strExpr:  strExpr '+'.boolExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 68
	boolExpr  goto 70
	numExpr  goto 69
	rollExpr  goto 26

state 40
	boolExpr:  strExpr CMP_EQ.strExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 71
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 41
	boolExpr:  strExpr CMP_NEQ.strExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 72
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 42
	strExpr:  '(' strExpr.')' 
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	'+'  shift 39
	')'  shift 73
	.  error


state 43
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  '(' boolExpr.')' 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	CMP_EQ  shift 58
	CMP_NEQ  shift 59
	CMP_AND  shift 56
	CMP_OR  shift 57
	'+'  shift 55
	')'  shift 74
	.  error


state 44
	strExpr:  numExpr.'+' strExpr 
	boolExpr:  numExpr.CMP_LT numExpr 
	boolExpr:  numExpr.CMP_GT numExpr 
	boolExpr:  numExpr.CMP_LTE numExpr 
	boolExpr:  numExpr.CMP_GTE numExpr 
	boolExpr:  numExpr.CMP_EQ numExpr 
	boolExpr:  numExpr.CMP_NEQ numExpr 
	numExpr:  '(' numExpr.')' 
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	CMP_LT  shift 46
	CMP_GT  shift 47
	CMP_LTE  shift 48
	CMP_GTE  shift 49
	CMP_EQ  shift 50
	CMP_NEQ  shift 51
	'+'  shift 45
	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	')'  shift 75
	.  error


state 45
	strExpr:  numExpr '+'.strExpr 
	numExpr:  numExpr '+'.numExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 76
	boolExpr  goto 24
	numExpr  goto 77
	rollExpr  goto 26

state 46
	boolExpr:  numExpr CMP_LT.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 78
	rollExpr  goto 26

state 47
	boolExpr:  numExpr CMP_GT.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 80
	rollExpr  goto 26

state 48
	boolExpr:  numExpr CMP_LTE.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 81
	rollExpr  goto 26

state 49
	boolExpr:  numExpr CMP_GTE.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 82
	rollExpr  goto 26

state 50
	boolExpr:  numExpr CMP_EQ.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 83
	rollExpr  goto 26

state 51
	boolExpr:  numExpr CMP_NEQ.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 84
	rollExpr  goto 26

state 52
	numExpr:  numExpr '-'.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 85
	rollExpr  goto 26

state 53
	numExpr:  numExpr '*'.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 86
	rollExpr  goto 26

state 54
	numExpr:  numExpr '/'.numExpr 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 87
	rollExpr  goto 26

state 55
	strExpr:  boolExpr '+'.strExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 88
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 56
	boolExpr:  boolExpr CMP_AND.boolExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 35
	boolExpr  goto 89
	numExpr  goto 23
	rollExpr  goto 26

state 57
	boolExpr:  boolExpr CMP_OR.boolExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 35
	boolExpr  goto 90
	numExpr  goto 23
	rollExpr  goto 26

state 58
	boolExpr:  boolExpr CMP_EQ.boolExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 35
	boolExpr  goto 91
	numExpr  goto 23
	rollExpr  goto 26

state 59
	boolExpr:  boolExpr CMP_NEQ.boolExpr 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 35
	boolExpr  goto 92
	numExpr  goto 23
	rollExpr  goto 26

state 60
	rollExpr:  NUMBER DICE.    (44)

	.  reduce 44 (src line 94)


state 61
	numExpr:  SET '('.strExpr ',' numExpr ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 93
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 62
	numExpr:  GET '('.strExpr ')' 

	GET  shift 28
	SET  shift 27
	CMP_NOT  shift 30
	STRING  shift 21
	NUMBER  shift 25
	DICE  shift 31
	BOOLEAN  shift 29
	'('  shift 22
	.  error

	strExpr  goto 94
	boolExpr  goto 24
	numExpr  goto 23
	rollExpr  goto 26

state 63
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  CMP_NOT boolExpr.    (21)
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	.  reduce 21 (src line 65)


state 64
	stmt:  GOTO '(' strExpr ')'.    (6)

	.  reduce 6 (src line 44)


state 65
	stmt:  CHOICE '(' strExpr ','.block ')' 

	START  shift 3
	.  error

	block  goto 95

state 66
	stmt:  IF '(' boolExpr ')'.block 
	stmt:  IF '(' boolExpr ')'.block ELSE block 

	START  shift 3
	.  error

	block  goto 96

state 67
	stmt:  SET '(' strExpr ','.numExpr ')' 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 97
	rollExpr  goto 26

state 68
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr '+' strExpr.    (14)
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	.  reduce 14 (src line 55)


state 69
	strExpr:  strExpr '+' numExpr.    (15)
	strExpr:  numExpr.'+' strExpr 
	boolExpr:  numExpr.CMP_LT numExpr 
	boolExpr:  numExpr.CMP_GT numExpr 
	boolExpr:  numExpr.CMP_LTE numExpr 
	boolExpr:  numExpr.CMP_GTE numExpr 
	boolExpr:  numExpr.CMP_EQ numExpr 
	boolExpr:  numExpr.CMP_NEQ numExpr 
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	CMP_LT  shift 46
	CMP_GT  shift 47
	CMP_LTE  shift 48
	CMP_GTE  shift 49
	CMP_EQ  shift 50
	CMP_NEQ  shift 51
	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 15 (src line 56)


state 70
	strExpr:  strExpr '+' boolExpr.    (17)
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	CMP_EQ  shift 58
	CMP_NEQ  shift 59
	CMP_AND  shift 56
	CMP_OR  shift 57
	.  reduce 17 (src line 58)


state 71
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr CMP_EQ strExpr.    (32)
	boolExpr:  strExpr.CMP_NEQ strExpr 

	.  reduce 32 (src line 76)


state 72
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 
	boolExpr:  strExpr CMP_NEQ strExpr.    (33)

	.  reduce 33 (src line 77)


state 73
	strExpr:  '(' strExpr ')'.    (13)

	.  reduce 13 (src line 54)


state 74
	boolExpr:  '(' boolExpr ')'.    (20)

	.  reduce 20 (src line 64)


state 75
	numExpr:  '(' numExpr ')'.    (36)

	.  reduce 36 (src line 83)


state 76
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  numExpr '+' strExpr.    (16)
	strExpr:  strExpr.'+' boolExpr 
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	.  reduce 16 (src line 57)


state 77
	strExpr:  numExpr.'+' strExpr 
	boolExpr:  numExpr.CMP_LT numExpr 
	boolExpr:  numExpr.CMP_GT numExpr 
	boolExpr:  numExpr.CMP_LTE numExpr 
	boolExpr:  numExpr.CMP_GTE numExpr 
	boolExpr:  numExpr.CMP_EQ numExpr 
	boolExpr:  numExpr.CMP_NEQ numExpr 
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr '+' numExpr.    (37)
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	CMP_LT  shift 46
	CMP_GT  shift 47
	CMP_LTE  shift 48
	CMP_GTE  shift 49
	CMP_EQ  shift 50
	CMP_NEQ  shift 51
	'*'  shift 53
	'/'  shift 54
	.  reduce 37 (src line 84)


state 78
	boolExpr:  numExpr CMP_LT numExpr.    (26)
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 26 (src line 70)


state 79
	numExpr:  '('.numExpr ')' 

	GET  shift 28
	SET  shift 27
	NUMBER  shift 25
	DICE  shift 31
	'('  shift 79
	.  error

	numExpr  goto 99
	rollExpr  goto 26

state 80
	boolExpr:  numExpr CMP_GT numExpr.    (27)
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 27 (src line 71)


state 81
	boolExpr:  numExpr CMP_LTE numExpr.    (28)
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 28 (src line 72)


state 82
	boolExpr:  numExpr CMP_GTE numExpr.    (29)
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 29 (src line 73)


state 83
	boolExpr:  numExpr CMP_EQ numExpr.    (30)
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 30 (src line 74)


state 84
	boolExpr:  numExpr CMP_NEQ numExpr.    (31)
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  reduce 31 (src line 75)


state 85
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr '-' numExpr.    (38)
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 

	'*'  shift 53
	'/'  shift 54
	.  reduce 38 (src line 85)


state 86
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr '*' numExpr.    (39)
	numExpr:  numExpr.'/' numExpr 

	.  reduce 39 (src line 86)


state 87
	numExpr:  numExpr.'+' numExpr 
	numExpr:  numExpr.'-' numExpr 
	numExpr:  numExpr.'*' numExpr 
	numExpr:  numExpr.'/' numExpr 
	numExpr:  numExpr '/' numExpr.    (40)

	.  reduce 40 (src line 87)


state 88
	strExpr:  strExpr.'+' strExpr 
	strExpr:  strExpr.'+' numExpr 
	strExpr:  strExpr.'+' boolExpr 
	strExpr:  boolExpr '+' strExpr.    (18)
	boolExpr:  strExpr.CMP_EQ strExpr 
	boolExpr:  strExpr.CMP_NEQ strExpr 

	CMP_EQ  shift 40
	CMP_NEQ  shift 41
	.  reduce 18 (src line 59)


state 89
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr CMP_AND boolExpr.    (22)
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	.  reduce 22 (src line 66)


state 90
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr CMP_OR boolExpr.    (23)
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr.CMP_NEQ boolExpr 

	.  reduce 23 (src line 67)


state 91
	strExpr:  boolExpr.'+' strExpr 
	boolExpr:  boolExpr.CMP_AND boolExpr 
	boolExpr:  boolExpr.CMP_OR boolExpr 
	boolExpr:  boolExpr.CMP_EQ boolExpr 
	boolExpr:  boolExpr CMP_EQ boolExpr.    (24)
	boolExpr:  boolExpr.CMP_NEQ boolExpr 
